# mbed-os-example-nfc

./: .gitignore  .travis.yml  README.md
.circleci/: config.yml
.github/workflows/: main.yml
NFC_Controller/: main.cpp
NFC_EEPROM/: CMakeLists.txt  README.md  custom_targets.json  mbed-os.lib  mbed_app.json  mbed_app_mm.json
NFC_EEPROM/EEPROMDriver/: EEPROMDriver.h
NFC_EEPROM/TARGET_MM/: PinNames.h
NFC_EEPROM/gen_config/: mbed_config.h
NFC_EEPROM/source/: NfcController2EepromAdapter.h  NfcControllerToEEPROMAdapter.h  main.cpp
NFC_SmartPoster/: CMakeLists.txt  README.md  main.cpp  mbed_app.json
NFC_SmartPoster/source/: main.cpp
tests/: README.md
